--- a/Week-4-Presentation/Lasso-Regression-Housing-price-without-sklearn-hyperparameters.ipynb
+++ b/Week-4-Presentation/Lasso-Regression-Housing-price-without-sklearn-hyperparameters.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "_uuid": "8f144cb466fa1333d41b2356f588ebacba2cab79"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "_uuid": "abda91c61669228e1b29c2fcb4816e5fbf114c7a"
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "_uuid": "24f0aae06fd2195aac00f39efb340e1230d5e255"
    },
@@ -229,7 +229,7 @@
        "4     15.2  395.60  12.43  22.9  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "_uuid": "c7cb828d2c731ea59a70f6b0a6fb114815fb3bc7"
    },
@@ -252,23 +252,21 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 333 entries, 0 to 332\n",
       "Data columns (total 15 columns):\n",
-      " #   Column   Non-Null Count  Dtype  \n",
-      "---  ------   --------------  -----  \n",
-      " 0   ID       333 non-null    int64  \n",
-      " 1   crim     333 non-null    float64\n",
-      " 2   zn       333 non-null    float64\n",
-      " 3   indus    333 non-null    float64\n",
-      " 4   chas     333 non-null    int64  \n",
-      " 5   nox      333 non-null    float64\n",
-      " 6   rm       333 non-null    float64\n",
-      " 7   age      333 non-null    float64\n",
-      " 8   dis      333 non-null    float64\n",
-      " 9   rad      333 non-null    int64  \n",
-      " 10  tax      333 non-null    int64  \n",
-      " 11  ptratio  333 non-null    float64\n",
-      " 12  black    333 non-null    float64\n",
-      " 13  lstat    333 non-null    float64\n",
-      " 14  medv     333 non-null    float64\n",
+      "ID         333 non-null int64\n",
+      "crim       333 non-null float64\n",
+      "zn         333 non-null float64\n",
+      "indus      333 non-null float64\n",
+      "chas       333 non-null int64\n",
+      "nox        333 non-null float64\n",
+      "rm         333 non-null float64\n",
+      "age        333 non-null float64\n",
+      "dis        333 non-null float64\n",
+      "rad        333 non-null int64\n",
+      "tax        333 non-null int64\n",
+      "ptratio    333 non-null float64\n",
+      "black      333 non-null float64\n",
+      "lstat      333 non-null float64\n",
+      "medv       333 non-null float64\n",
       "dtypes: float64(11), int64(4)\n",
       "memory usage: 39.1 KB\n"
      ]
@@ -492,7 +490,7 @@
        "max    396.900000   37.970000   50.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "_uuid": "cbd32d564bbe45167243ce0b35d80781b18b94d4"
    },
@@ -534,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "_uuid": "55c45be0eaeddb7a278e8d84c5468587b07b9333"
    },
@@ -542,18 +540,68 @@
     {
      "data": {
       "text/plain": [
-       "<bound method DataFrame.corr of         crim    zn  indus  chas    nox     rm   age     dis  rad  tax  \\\n",
-       "0    0.00632  18.0   2.31     0  0.538  6.575  65.2  4.0900    1  296   \n",
-       "1    0.02731   0.0   7.07     0  0.469  6.421  78.9  4.9671    2  242   \n",
-       "2    0.03237   0.0   2.18     0  0.458  6.998  45.8  6.0622    3  222   \n",
-       "3    0.06905   0.0   2.18     0  0.458  7.147  54.2  6.0622    3  222   \n",
-       "4    0.08829  12.5   7.87     0  0.524  6.012  66.6  5.5605    5  311   \n",
-       "..       ...   ...    ...   ...    ...    ...   ...     ...  ...  ...   \n",
-       "328  0.17783   0.0   9.69     0  0.585  5.569  73.5  2.3999    6  391   \n",
-       "329  0.06263   0.0  11.93     0  0.573  6.593  69.1  2.4786    1  273   \n",
-       "330  0.04527   0.0  11.93     0  0.573  6.120  76.7  2.2875    1  273   \n",
-       "331  0.06076   0.0  11.93     0  0.573  6.976  91.0  2.1675    1  273   \n",
-       "332  0.04741   0.0  11.93     0  0.573  6.030  80.8  2.5050    1  273   \n",
+       "<bound method DataFrame.corr of          crim    zn  indus  chas    nox     rm    age     dis  rad  tax  \\\n",
+       "0     0.00632  18.0   2.31     0  0.538  6.575   65.2  4.0900    1  296   \n",
+       "1     0.02731   0.0   7.07     0  0.469  6.421   78.9  4.9671    2  242   \n",
+       "2     0.03237   0.0   2.18     0  0.458  6.998   45.8  6.0622    3  222   \n",
+       "3     0.06905   0.0   2.18     0  0.458  7.147   54.2  6.0622    3  222   \n",
+       "4     0.08829  12.5   7.87     0  0.524  6.012   66.6  5.5605    5  311   \n",
+       "5     0.22489  12.5   7.87     0  0.524  6.377   94.3  6.3467    5  311   \n",
+       "6     0.11747  12.5   7.87     0  0.524  6.009   82.9  6.2267    5  311   \n",
+       "7     0.09378  12.5   7.87     0  0.524  5.889   39.0  5.4509    5  311   \n",
+       "8     0.62976   0.0   8.14     0  0.538  5.949   61.8  4.7075    4  307   \n",
+       "9     0.63796   0.0   8.14     0  0.538  6.096   84.5  4.4619    4  307   \n",
+       "10    0.62739   0.0   8.14     0  0.538  5.834   56.5  4.4986    4  307   \n",
+       "11    1.05393   0.0   8.14     0  0.538  5.935   29.3  4.4986    4  307   \n",
+       "12    0.80271   0.0   8.14     0  0.538  5.456   36.6  3.7965    4  307   \n",
+       "13    1.25179   0.0   8.14     0  0.538  5.570   98.1  3.7979    4  307   \n",
+       "14    0.85204   0.0   8.14     0  0.538  5.965   89.2  4.0123    4  307   \n",
+       "15    1.23247   0.0   8.14     0  0.538  6.142   91.7  3.9769    4  307   \n",
+       "16    0.98843   0.0   8.14     0  0.538  5.813  100.0  4.0952    4  307   \n",
+       "17    0.95577   0.0   8.14     0  0.538  6.047   88.8  4.4534    4  307   \n",
+       "18    1.13081   0.0   8.14     0  0.538  5.713   94.1  4.2330    4  307   \n",
+       "19    1.35472   0.0   8.14     0  0.538  6.072  100.0  4.1750    4  307   \n",
+       "20    1.61282   0.0   8.14     0  0.538  6.096   96.9  3.7598    4  307   \n",
+       "21    0.17505   0.0   5.96     0  0.499  5.966   30.2  3.8473    5  279   \n",
+       "22    0.02763  75.0   2.95     0  0.428  6.595   21.8  5.4011    3  252   \n",
+       "23    0.03359  75.0   2.95     0  0.428  7.024   15.8  5.4011    3  252   \n",
+       "24    0.14150   0.0   6.91     0  0.448  6.169    6.6  5.7209    3  233   \n",
+       "25    0.15936   0.0   6.91     0  0.448  6.211    6.5  5.7209    3  233   \n",
+       "26    0.12269   0.0   6.91     0  0.448  6.069   40.0  5.7209    3  233   \n",
+       "27    0.17142   0.0   6.91     0  0.448  5.682   33.8  5.1004    3  233   \n",
+       "28    0.18836   0.0   6.91     0  0.448  5.786   33.3  5.1004    3  233   \n",
+       "29    0.22927   0.0   6.91     0  0.448  6.030   85.5  5.6894    3  233   \n",
+       "..        ...   ...    ...   ...    ...    ...    ...     ...  ...  ...   \n",
+       "303   7.83932   0.0  18.10     0  0.655  6.209   65.4  2.9634   24  666   \n",
+       "304   3.16360   0.0  18.10     0  0.655  5.759   48.2  3.0665   24  666   \n",
+       "305   3.77498   0.0  18.10     0  0.655  5.952   84.7  2.8715   24  666   \n",
+       "306   4.42228   0.0  18.10     0  0.584  6.003   94.5  2.5403   24  666   \n",
+       "307  15.57570   0.0  18.10     0  0.580  5.926   71.0  2.9084   24  666   \n",
+       "308  13.07510   0.0  18.10     0  0.580  5.713   56.7  2.8237   24  666   \n",
+       "309   4.03841   0.0  18.10     0  0.532  6.229   90.7  3.0993   24  666   \n",
+       "310   3.56868   0.0  18.10     0  0.580  6.437   75.0  2.8965   24  666   \n",
+       "311   8.05579   0.0  18.10     0  0.584  5.427   95.4  2.4298   24  666   \n",
+       "312   4.87141   0.0  18.10     0  0.614  6.484   93.6  2.3053   24  666   \n",
+       "313  15.02340   0.0  18.10     0  0.614  5.304   97.3  2.1007   24  666   \n",
+       "314  10.23300   0.0  18.10     0  0.614  6.185   96.7  2.1705   24  666   \n",
+       "315  14.33370   0.0  18.10     0  0.614  6.229   88.0  1.9512   24  666   \n",
+       "316   5.82401   0.0  18.10     0  0.532  6.242   64.7  3.4242   24  666   \n",
+       "317   5.70818   0.0  18.10     0  0.532  6.750   74.9  3.3317   24  666   \n",
+       "318   2.81838   0.0  18.10     0  0.532  5.762   40.3  4.0983   24  666   \n",
+       "319   2.37857   0.0  18.10     0  0.583  5.871   41.9  3.7240   24  666   \n",
+       "320   5.69175   0.0  18.10     0  0.583  6.114   79.8  3.5459   24  666   \n",
+       "321   4.83567   0.0  18.10     0  0.583  5.905   53.2  3.1523   24  666   \n",
+       "322   0.15086   0.0  27.74     0  0.609  5.454   92.7  1.8209    4  711   \n",
+       "323   0.20746   0.0  27.74     0  0.609  5.093   98.0  1.8226    4  711   \n",
+       "324   0.10574   0.0  27.74     0  0.609  5.983   98.8  1.8681    4  711   \n",
+       "325   0.11132   0.0  27.74     0  0.609  5.983   83.5  2.1099    4  711   \n",
+       "326   0.17331   0.0   9.69     0  0.585  5.707   54.0  2.3817    6  391   \n",
+       "327   0.26838   0.0   9.69     0  0.585  5.794   70.6  2.8927    6  391   \n",
+       "328   0.17783   0.0   9.69     0  0.585  5.569   73.5  2.3999    6  391   \n",
+       "329   0.06263   0.0  11.93     0  0.573  6.593   69.1  2.4786    1  273   \n",
+       "330   0.04527   0.0  11.93     0  0.573  6.120   76.7  2.2875    1  273   \n",
+       "331   0.06076   0.0  11.93     0  0.573  6.976   91.0  2.1675    1  273   \n",
+       "332   0.04741   0.0  11.93     0  0.573  6.030   80.8  2.5050    1  273   \n",
        "\n",
        "     ptratio   black  lstat  medv  \n",
        "0       15.3  396.90   4.98  24.0  \n",
@@ -561,7 +609,57 @@
        "2       18.7  394.63   2.94  33.4  \n",
        "3       18.7  396.90   5.33  36.2  \n",
        "4       15.2  395.60  12.43  22.9  \n",
+       "5       15.2  392.52  20.45  15.0  \n",
+       "6       15.2  396.90  13.27  18.9  \n",
+       "7       15.2  390.50  15.71  21.7  \n",
+       "8       21.0  396.90   8.26  20.4  \n",
+       "9       21.0  380.02  10.26  18.2  \n",
+       "10      21.0  395.62   8.47  19.9  \n",
+       "11      21.0  386.85   6.58  23.1  \n",
+       "12      21.0  288.99  11.69  20.2  \n",
+       "13      21.0  376.57  21.02  13.6  \n",
+       "14      21.0  392.53  13.83  19.6  \n",
+       "15      21.0  396.90  18.72  15.2  \n",
+       "16      21.0  394.54  19.88  14.5  \n",
+       "17      21.0  306.38  17.28  14.8  \n",
+       "18      21.0  360.17  22.60  12.7  \n",
+       "19      21.0  376.73  13.04  14.5  \n",
+       "20      21.0  248.31  20.34  13.5  \n",
+       "21      19.2  393.43  10.13  24.7  \n",
+       "22      18.3  395.63   4.32  30.8  \n",
+       "23      18.3  395.62   1.98  34.9  \n",
+       "24      17.9  383.37   5.81  25.3  \n",
+       "25      17.9  394.46   7.44  24.7  \n",
+       "26      17.9  389.39   9.55  21.2  \n",
+       "27      17.9  396.90  10.21  19.3  \n",
+       "28      17.9  396.90  14.15  20.0  \n",
+       "29      17.9  392.74  18.80  16.6  \n",
        "..       ...     ...    ...   ...  \n",
+       "303     20.2  396.90  13.22  21.4  \n",
+       "304     20.2  334.40  14.13  19.9  \n",
+       "305     20.2   22.01  17.15  19.0  \n",
+       "306     20.2  331.29  21.32  19.1  \n",
+       "307     20.2  368.74  18.13  19.1  \n",
+       "308     20.2  396.90  14.76  20.1  \n",
+       "309     20.2  395.33  12.87  19.6  \n",
+       "310     20.2  393.37  14.36  23.2  \n",
+       "311     20.2  352.58  18.14  13.8  \n",
+       "312     20.2  396.21  18.68  16.7  \n",
+       "313     20.2  349.48  24.91  12.0  \n",
+       "314     20.2  379.70  18.03  14.6  \n",
+       "315     20.2  383.32  13.11  21.4  \n",
+       "316     20.2  396.90  10.74  23.0  \n",
+       "317     20.2  393.07   7.74  23.7  \n",
+       "318     20.2  392.92  10.42  21.8  \n",
+       "319     20.2  370.73  13.34  20.6  \n",
+       "320     20.2  392.68  14.98  19.1  \n",
+       "321     20.2  388.22  11.45  20.6  \n",
+       "322     20.1  395.09  18.06  15.2  \n",
+       "323     20.1  318.43  29.68   8.1  \n",
+       "324     20.1  390.11  18.07  13.6  \n",
+       "325     20.1  396.90  13.35  20.1  \n",
+       "326     19.2  396.90  12.01  21.8  \n",
+       "327     19.2  396.90  14.10  18.3  \n",
        "328     19.2  395.77  15.10  17.5  \n",
        "329     21.0  391.99   9.67  22.4  \n",
        "330     21.0  396.90   9.08  20.6  \n",
@@ -571,7 +669,7 @@
        "[333 rows x 14 columns]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "_uuid": "47d0ed5d507fe7a9a077acbf9c21b9c096a21df4"
    },
@@ -608,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "_uuid": "fe5a0141e68ec9e0d98b248bd0697ad8339df864"
    },
@@ -621,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "_uuid": "af6124c5bfc498be6a185b8fcbcf4cd0a257580f"
    },
@@ -638,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +784,7 @@
        "         -0.3511339 ,  0.23754199, -0.31575621]]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "_uuid": "7c77b4a60b955b84dbaa7a5d9355e80bd9708a9c"
    },
@@ -857,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,14 +1035,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum accuracy achieved by our model through grid searching :  46.27981735663812\n",
+      "Maximum accuracy achieved by our model through grid searching :  46.279817356638084\n",
       "The least mean Absolute error 2.7022730417277074\n",
       "The least root mean squared error  3.49\n",
       "The mean squared error  12.17\n"
@@ -958,14 +1056,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best alpha: 0.001\n"
+      "Best alpha: 0.001\n",
+      "mse 12.174046556501848\n"
      ]
     }
    ],
@@ -1015,7 +1114,64 @@
     "# Perform the random search\n",
     "best_alpha = random_search(X, y, alphas, n_iter)\n",
     "print(f\"Best alpha: {best_alpha}\")\n",
-    "print(\"\")\n"
+    "print(\"mse\",mse)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best alpha: 2.15443\n",
+      "Best R2 score: 45.42548\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Define Ridge Regression function\n",
+    "def Lasso_Regression(alpha, x_train, x_test, y_train, y_test):\n",
+    "    # Fit Ridge Regression model with given alpha\n",
+    "    model = np.linalg.inv(x_train.T.dot(x_train) + alpha*np.identity(x_train.shape[1])).dot(x_train.T).dot(y_train)\n",
+    "    \n",
+    "    # Predict on test set\n",
+    "    y_pred = x_test.dot(model)\n",
+    "    \n",
+    "    # Calculate R2 score\n",
+    "    r2 = 1 - np.sum((y_test - y_pred)**2) / np.sum((y_test -np.mean(y_test))**2)\n",
+    "    \n",
+    "    return r2\n",
+    "\n",
+    "# Define range of alpha values to search over\n",
+    "alphas = np.logspace(-3, 3, num=100)\n",
+    "\n",
+    "# Define number of iterations for random search\n",
+    "n_iter = 10\n",
+    "\n",
+    "# Initialize best hyperparameters and R2 score\n",
+    "best_alpha = None\n",
+    "best_r2 = -np.inf\n",
+    "\n",
+    "# Perform random search\n",
+    "for i in range(n_iter):\n",
+    "    # Select random alpha value\n",
+    "    alpha = np.random.choice(alphas)\n",
+    "    \n",
+    "    # Compute R2 score for Ridge Regression with this alpha\n",
+    "    r2 = Lasso_Regression(alpha, x_train, x_test, y_train, y_test)\n",
+    "    \n",
+    "    # Update best hyperparameters and R2 score if necessary\n",
+    "    if r2 > best_r2:\n",
+    "        best_alpha = alpha\n",
+    "        best_r2 = r2\n",
+    "        \n",
+    "# Print best hyperparameters and R2 score\n",
+    "print(\"Best alpha: {:.5f}\".format(best_alpha))\n",
+    "print(\"Best R2 score: {:.5f}\".format(best_r2*100))\n"
    ]
   },
   {
@@ -1042,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.0"
   },
   "vscode": {
    "interpreter": {
