--- a/Week-5-Presentation/Crop-Yield-Prediction (EDA & Visualization).ipynb
+++ b/Week-5-Presentation/Crop-Yield-Prediction (EDA & Visualization).ipynb
@@ -5,9 +5,68 @@
    "id": "b37c7ba8",
    "metadata": {},
    "source": [
-    "# Crop Yield Prediction\n",
-    "\n",
-    "## 1. Importing libraries"
+    "# Crop Yield Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cfe270f",
+   "metadata": {},
+   "source": [
+    "## Preprocessing steps\n",
+    "1. Acquire the dataset\n",
+    "2. Import all the crucial libraries\n",
+    "3. Import the dataset\n",
+    "4. Identifying and handling the missing values\n",
+    "5. Encoding the categorical data\n",
+    "6. Splitting the dataset\n",
+    "7. Feature scaling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3fa81f1",
+   "metadata": {},
+   "source": [
+    "## Model Buildig\n",
+    "8. Import algorithm\n",
+    "9. Model fitting\n",
+    "10. Model prediction\n",
+    "11. Model performance with test data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b41f4a8",
+   "metadata": {},
+   "source": [
+    "## Hyper parameter tuning\n",
+    "12. GridsearchCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c018802",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77d1330e",
+   "metadata": {},
+   "source": [
+    "## 1. Acquire the Dataset\n",
+    "### From kaggle - Crop yield prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ed9372",
+   "metadata": {},
+   "source": [
+    "## 2. Importing libraries"
    ]
   },
   {
@@ -32,7 +91,7 @@
    "id": "3e066ef1",
    "metadata": {},
    "source": [
-    "## 2. Loading the datasets"
+    "## 3. Import the dataset"
    ]
   },
   {
@@ -47,14 +106,6 @@
     "Yield = pd.read_csv('Crop-Yield-Prediction-Datasets/yield.csv')\n",
     "Pesticides = pd.read_csv('Crop-Yield-Prediction-Datasets/pesticides.csv')\n",
     "Rainfall = pd.read_csv('Crop-Yield-Prediction-Datasets/rainfall.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8686bbc5",
-   "metadata": {},
-   "source": [
-    "## 3. Exploratory Data Analysis"
    ]
   },
   {
@@ -225,14 +276,6 @@
    ],
    "source": [
     "Temp.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "447b11d1",
-   "metadata": {},
-   "source": [
-    "### 4. Preprocessing"
    ]
   },
   {
@@ -2125,6 +2168,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee075fd3",
+   "metadata": {},
+   "source": [
+    "## 4. Identifying and handling the missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "2aac7169",
@@ -2764,6 +2815,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77c41c37",
+   "metadata": {},
+   "source": [
+    "## Final dataset after merging (7columns and 28,242 rows)\n",
+    "#### After  droping the null values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "2b175d47",
@@ -3375,7 +3435,7 @@
    "id": "233e4c75",
    "metadata": {},
    "source": [
-    "## 5. Data Visualization"
+    "## Data Visualization"
    ]
   },
   {
@@ -3499,7 +3559,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1eeaa33e9d0>"
+       "<seaborn.axisgrid.PairGrid at 0x234f459c7c0>"
       ]
      },
      "execution_count": 60,
@@ -3521,6 +3581,14 @@
    ],
    "source": [
     "sns.pairplot(Yield)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce090b29",
+   "metadata": {},
+   "source": [
+    "## 5. Encoding the categorical data"
    ]
   },
   {
@@ -3744,7 +3812,6 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
     "Yield_ohe = pd.get_dummies(Yield, columns=['Area',\"Item\"], prefix = ['Country',\"Item\"])\n",
     "X=Yield_ohe.loc[:, Yield_ohe.columns != 'Yield-hg/ha']\n",
     "Y=Yield['Yield-hg/ha']\n",
@@ -3778,7 +3845,7 @@
    "id": "5f89f247",
    "metadata": {},
    "source": [
-    "## 6. Splitting the data"
+    "## 6. Splitting the dataset"
    ]
   },
   {
@@ -3797,7 +3864,7 @@
    "id": "6728b133",
    "metadata": {},
    "source": [
-    "## 7. Scaling the Data"
+    "## 7. Feature scaling"
    ]
   },
   {
@@ -3827,7 +3894,15 @@
    "id": "27970b11",
    "metadata": {},
    "source": [
-    "## 8. Model Building"
+    "## Model Building"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "147f0f90",
+   "metadata": {},
+   "source": [
+    "### 8. Import algorithm"
    ]
   },
   {
@@ -3839,6 +3914,14 @@
    "source": [
     "from sklearn.linear_model import Lasso\n",
     "sk_model = Lasso(alpha=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccd6f27a",
+   "metadata": {},
+   "source": [
+    "### 9. Model fitting"
    ]
   },
   {
@@ -3887,6 +3970,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d96982f5",
+   "metadata": {},
+   "source": [
+    "### 10. Model prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "7e62b829",
@@ -3901,7 +3992,7 @@
    "id": "4656f88c",
    "metadata": {},
    "source": [
-    "## 9. Performance of the model"
+    "### 11. Model performance with test data"
    ]
   },
   {
@@ -3933,6 +4024,22 @@
     "print('MAE:', metrics.mean_absolute_error(y_test, y_pred))\n",
     "print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
     "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88d5be14",
+   "metadata": {},
+   "source": [
+    "# Hyper parameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daa7b9a3",
+   "metadata": {},
+   "source": [
+    "### 12. GridsearchCV"
    ]
   },
   {
