preprocessing and visualization

--- a/Week-5-Presentation/Crop-Yield-Prediction (Preprocessing & Visualization).ipynb
+++ b/Week-5-Presentation/Crop-Yield-Prediction (Preprocessing & Visualization).ipynb
@@ -25,27 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3fa81f1",
-   "metadata": {},
-   "source": [
-    "## Model Buildig\n",
-    "8. Import algorithm\n",
-    "9. Model fitting\n",
-    "10. Model prediction\n",
-    "11. Model performance with test data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b41f4a8",
-   "metadata": {},
-   "source": [
-    "## Hyper parameter tuning\n",
-    "12. GridsearchCV"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0c018802",
    "metadata": {},
    "source": [
@@ -3559,7 +3538,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2ac319c74c0>"
+       "<seaborn.axisgrid.PairGrid at 0x1665681b370>"
       ]
      },
      "execution_count": 60,
@@ -4024,89 +4003,6 @@
     "print('MAE:', metrics.mean_absolute_error(y_test, y_pred))\n",
     "print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
     "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88d5be14",
-   "metadata": {},
-   "source": [
-    "# Hyper parameter Tuning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "daa7b9a3",
-   "metadata": {},
-   "source": [
-    "### 12. GridsearchCV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738ad16d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#gridsearchcv\n",
-    "from sklearn.model_selection import GridSearchCV,KFold,cross_val_score\n",
-    "folds=KFold(n_splits=5,shuffle=True,random_state=42)\n",
-    "params = {'alpha':[0.001,0.01,1.0,5.0,10.0]}\n",
-    "\n",
-    "model = Lasso()\n",
-    "\n",
-    "model_cv = GridSearchCV(estimator=model,param_grid=params,scoring='r2',cv=folds,return_train_score=True,verbose=0)\n",
-    "model_cv.fit(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c552c53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_cv.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb57ce4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred_grid = model_cv.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "705bde22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "\n",
-    "# R squared error\n",
-    "score_1 = metrics.r2_score(y_test, y_pred_grid)\n",
-    "\n",
-    "# Mean Absolute Error\n",
-    "score_2 = metrics.mean_absolute_error(y_test, y_pred_grid)\n",
-    "\n",
-    "# Mean Absolute Error\n",
-    "score_3 = metrics.mean_squared_error(y_test, y_pred_grid)\n",
-    "\n",
-    "# Mean Absolute Error\n",
-    "score_4 = np.sqrt(metrics.mean_squared_error(y_test, y_pred_grid))\n",
-    "\n",
-    "print(\"R squared error for grid : \", score_1*100)\n",
-    "a_r2 = 1-(1-score_1)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
-    "print('Adjusted_r2_score',a_r2*100)\n",
-    "print('Mean Absolute Error for grid: ', score_2)\n",
-    "print('Mean Squared Error for grid: ', score_3)\n",
-    "print('Root Mean Squared Error for grid: ', score_4)"
    ]
   },
   {
