--- a/Week-6-Presentation/Sales_of_retail_stores.ipynb
+++ b/Week-6-Presentation/Sales_of_retail_stores.ipynb
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "id": "4cbf7dff",
    "metadata": {},
    "outputs": [
@@ -2164,17 +2164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "id": "27d962e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1d44deed100>"
+       "<seaborn.axisgrid.PairGrid at 0x222d8eeea90>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "id": "f30aaec1",
    "metadata": {},
    "outputs": [
@@ -2333,7 +2333,7 @@
        "4   01  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "f6b0cdca",
    "metadata": {},
    "outputs": [],
@@ -2354,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "4fe6d182",
    "metadata": {},
    "outputs": [
@@ -2490,7 +2490,7 @@
        "4   01  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "id": "9e898fec",
    "metadata": {},
    "outputs": [
@@ -2511,7 +2511,7 @@
        "3"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2522,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "id": "5bfe4968",
    "metadata": {},
    "outputs": [
@@ -2532,7 +2532,7 @@
        "3"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "id": "e5a846dd",
    "metadata": {},
    "outputs": [],
@@ -2562,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "9d67a9fb",
    "metadata": {},
    "outputs": [],
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "c6ce9247",
    "metadata": {},
    "outputs": [],
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "id": "94a68069",
    "metadata": {},
    "outputs": [
@@ -2713,7 +2713,7 @@
        "4                     21                    1      1  2012    01   01  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "id": "ded5e122",
    "metadata": {},
    "outputs": [
@@ -2853,7 +2853,7 @@
        "394999                     33                    0      0  2014    02   28  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2864,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "id": "7ee6f7ac",
    "metadata": {},
    "outputs": [],
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "id": "d4ccd0ec",
    "metadata": {},
    "outputs": [],
@@ -2885,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "id": "62e7bdbf",
    "metadata": {},
    "outputs": [],
@@ -2897,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "id": "95424dd0",
    "metadata": {},
    "outputs": [],
@@ -2909,7 +2909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "id": "3708f886",
    "metadata": {},
    "outputs": [
@@ -3026,7 +3026,7 @@
        "4                    1      1  2012    01   01  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "id": "e7baee7c",
    "metadata": {},
    "outputs": [],
@@ -3057,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 85,
    "id": "07fadb52",
    "metadata": {},
    "outputs": [],
@@ -3076,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "id": "cf11fb12",
    "metadata": {},
    "outputs": [],
@@ -3088,7 +3088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "id": "c4181e1b",
    "metadata": {},
    "outputs": [],
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "id": "b0a371bc",
    "metadata": {},
    "outputs": [],
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "id": "98563743",
    "metadata": {},
    "outputs": [
@@ -3118,7 +3118,7 @@
        "19.43615179984025"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3129,7 +3129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "id": "492afd1d",
    "metadata": {},
    "outputs": [],
@@ -3139,7 +3139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "id": "47e29569",
    "metadata": {},
    "outputs": [
@@ -3152,7 +3152,7 @@
        "Lasso(alpha=0.01)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "id": "91aa0e21",
    "metadata": {},
    "outputs": [
@@ -3173,7 +3173,7 @@
        "19.274471662008164"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3184,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "id": "2814ad1a",
    "metadata": {},
    "outputs": [],
@@ -3202,7 +3202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "id": "e8e3d424",
    "metadata": {},
    "outputs": [
@@ -3232,7 +3232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "id": "ab903a36",
    "metadata": {},
    "outputs": [
@@ -3241,10 +3241,9 @@
      "output_type": "stream",
      "text": [
       "Lasso\n",
-      "r2_score 19.78\n",
-      "Adjusted_r2_score 19.73\n",
-      "MAE: 1.77\n",
-      "MSE: 5.67\n",
+      "r2_score 19.67\n",
+      "Adjusted_r2_score 19.62\n",
+      "MAE: 1.78\n",
       "RMSE: 2.38\n"
      ]
     }
@@ -3257,7 +3256,7 @@
     "a_r2 = 1-(1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
     "print('Adjusted_r2_score',\"{:.2f}\".format(a_r2*100))\n",
     "print('MAE:', \"{:.2f}\".format(metrics.mean_absolute_error(y_test, y_pred)))\n",
-    "print('MSE:', \"{:.2f}\".format(metrics.mean_squared_error(y_test, y_pred)))\n",
+    "#print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
     "print('RMSE:', \"{:.2f}\".format(np.sqrt(metrics.mean_squared_error(y_test, y_pred))))"
    ]
   },
@@ -3271,133 +3270,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "4598513f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "class LassoRegression:\n",
-    "    def __init__(self, alpha, max_iter=1000, tol=1e-4):\n",
-    "        self.alpha = alpha\n",
-    "        self.max_iter = max_iter\n",
-    "        self.tol = tol\n",
-    "        self.coef_ = None\n",
-    "        self.intercept_ = None\n",
-    "    \n",
-    "    def fit(self, X, y):\n",
-    "        m, n = X.shape\n",
-    "        theta = np.zeros(n)\n",
-    "        self.intercept_ = np.mean(y)\n",
-    "        X_centered = X - np.mean(X, axis=0)\n",
-    "        for iteration in range(self.max_iter):\n",
-    "            old_theta = theta.copy()\n",
-    "            for j in range(n):\n",
-    "                X_j = X_centered[:, j]\n",
-    "                y_pred = X_centered.dot(theta) + self.intercept_\n",
-    "                r = y - y_pred + theta[j] * X_j\n",
-    "                z = X_j.dot(X_j)\n",
-    "                if z == 0:\n",
-    "                    theta[j] = 0\n",
-    "                else:\n",
-    "                    theta[j] = np.sign(np.sum(X_j*r)) * max(0, np.abs(np.sum(X_j*r)) - self.alpha) / z\n",
-    "            self.intercept_ = np.mean(y - X_centered.dot(theta))\n",
-    "            if np.sum(np.abs(theta - old_theta)) < self.tol:\n",
-    "                break\n",
-    "        self.coef_ = theta\n",
-    "    \n",
-    "    def predict(self, X):\n",
-    "        return X.dot(self.coef_) + self.intercept_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "b7804d37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fit the Lasso regression model\n",
-    "lasso = LassoRegression(alpha=1)\n",
-    "lasso.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the testing set\n",
-    "y_pred = lasso.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "cb57a523",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def r2_score(y_test, y_pred):\n",
-    "    sse = np.sum((y_test - y_pred) ** 2)\n",
-    "    sst = np.sum((y_test - np.mean(y_test)) ** 2)\n",
-    "    r2 = 1 - sse / sst\n",
-    "    return r2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "668dc014",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R-squared: 19.776947047067427\n"
-     ]
-    }
-   ],
-   "source": [
-    "r2 = r2_score(y_test, y_pred)\n",
-    "print(\"R-squared:\", r2*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "6374e911",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def mean_absolute_error(y_test, y_pred):\n",
-    "    mae = np.mean(np.abs(y_test - y_pred))\n",
-    "    return mae\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "6e023bbd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean absolute error: 1.7712311053685657\n"
-     ]
-    }
-   ],
-   "source": [
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "print(\"Mean absolute error:\", mae)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81b5d1a7",
+   "id": "b7804d37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb57a523",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "668dc014",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6374e911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e023bbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4cbcc43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93d10f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47cdb9e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2006e20d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbc2bc39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bf67c53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d4c8cbd",
    "metadata": {},
    "outputs": [],
    "source": []
