--- a/Week-6-Presentation/Old car price prediction without sklearn.ipynb
+++ b/Week-6-Presentation/Old car price prediction without sklearn.ipynb
@@ -3915,7 +3915,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x12ab4a36d30>"
+       "<seaborn.axisgrid.PairGrid at 0x13581b615e0>"
       ]
      },
      "execution_count": 78,
@@ -4730,50 +4730,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "id": "78e2445b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
-    "def train_test_split(X, y, test_size=0.3, random_state=None):\n",
-    "    \n",
-    "    X=X.values\n",
-    "    # Set random seed\n",
-    "    if random_state:\n",
-    "        random.seed(random_state)\n",
-    "\n",
-    "    # Determine number of test samples\n",
-    "    n_samples = len(X)\n",
-    "    n_test = int(test_size * n_samples)\n",
-    "\n",
-    "    # Shuffle indices\n",
-    "    indices = list(range(n_samples))\n",
-    "    random.shuffle(indices)\n",
-    "\n",
-    "    # Split indices into training and testing sets\n",
-    "    test_indices = indices[:n_test]\n",
-    "    train_indices = indices[n_test:]\n",
-    "\n",
-    "    # Split data into training and testing sets\n",
-    "    X_train = [X[i] for i in train_indices]\n",
-    "    X_test = [X[i] for i in test_indices]\n",
-    "    y_train = [y[i] for i in train_indices]\n",
-    "    y_test = [y[i] for i in test_indices]\n",
-    "\n",
-    "    return X_train, X_test, y_train, y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "f700f1e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data into training and testing sets.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state = 42)"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
    ]
   },
   {
@@ -4818,6 +4781,119 @@
   {
    "cell_type": "code",
    "execution_count": 96,
+   "id": "87f7b498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "model = Lasso(alpha=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "ab088dfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Lasso(alpha=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Lasso</label><div class=\"sk-toggleable__content\"><pre>Lasso(alpha=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "Lasso(alpha=1)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "df26fd3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90.01583195798445"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(X_train, y_train)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "1c0e746a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "8a6ce582",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso\n",
+      "r2_score 84.64\n",
+      "Adjusted_r2_score 75.19\n",
+      "MAE: 409502.61\n",
+      "RMSE: 641860.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print('Lasso')\n",
+    "print('r2_score', \"{:.2f}\".format(metrics.r2_score(y_test,y_pred)*100))\n",
+    "score = metrics.r2_score(y_test,y_pred)\n",
+    "a_r2 = 1-(1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
+    "print('Adjusted_r2_score',\"{:.2f}\".format(a_r2*100))\n",
+    "print('MAE:', \"{:.2f}\".format(metrics.mean_absolute_error(y_test, y_pred)))\n",
+    "#print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "print('RMSE:', \"{:.2f}\".format(np.sqrt(metrics.mean_squared_error(y_test, y_pred))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36653e46",
+   "metadata": {},
+   "source": [
+    "# without sklearn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc1e04af",
+   "metadata": {},
+   "source": [
+    "## Model building"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "id": "806e603a",
    "metadata": {},
    "outputs": [],
@@ -4859,7 +4935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "id": "f540ddb3",
    "metadata": {},
    "outputs": [],
@@ -4874,7 +4950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "id": "0f8e671f",
    "metadata": {},
    "outputs": [],
@@ -4890,7 +4966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "id": "64309113",
    "metadata": {},
    "outputs": [
@@ -4898,7 +4974,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-squared: 85.81786515405987\n"
+      "R-squared: 84.64000704423351\n"
      ]
     }
    ],
@@ -4909,7 +4985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "id": "781e5da0",
    "metadata": {},
    "outputs": [],
@@ -4923,7 +4999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
    "id": "5693f4ca",
    "metadata": {},
    "outputs": [
@@ -4931,7 +5007,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 406969.1420621377\n"
+      "Mean absolute error: 409505.5302289955\n"
      ]
     }
    ],
