--- a/Week-6-Presentation/Flight_price_prediction_without_sklearn.ipynb
+++ b/Week-6-Presentation/Flight_price_prediction_without_sklearn.ipynb
@@ -3585,7 +3585,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "49f9400a",
+   "id": "5d8a2293",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3596,7 +3596,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5e383df0",
+   "id": "84728ffe",
    "metadata": {},
    "outputs": [
     {
@@ -3620,7 +3620,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0bb89ab5",
+   "id": "815116a9",
    "metadata": {},
    "outputs": [
     {
@@ -3641,7 +3641,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "de9025fc",
+   "id": "e69e4e8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3650,8 +3650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "0f66bafc",
+   "execution_count": 68,
+   "id": "20616569",
    "metadata": {},
    "outputs": [
     {
@@ -3661,8 +3661,9 @@
       "Lasso\n",
       "r2_score 91.02\n",
       "Adjusted_r2_score 91.02\n",
-      "MAE: 4505.90\n",
-      "RMSE: 6810.89\n"
+      "MAE: 4512.96\n",
+      "MSE: 46385405.83337629\n",
+      "RMSE: 6810.68\n"
      ]
     }
    ],
@@ -3674,21 +3675,21 @@
     "a_r2 = 1-(1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
     "print('Adjusted_r2_score',\"{:.2f}\".format(a_r2*100))\n",
     "print('MAE:', \"{:.2f}\".format(metrics.mean_absolute_error(y_test, y_pred)))\n",
-    "#print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
     "print('RMSE:', \"{:.2f}\".format(np.sqrt(metrics.mean_squared_error(y_test, y_pred))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e611ebcd",
+   "id": "5b7a456a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2b5be9c1",
+   "id": "a0d11b50",
    "metadata": {},
    "source": [
     "# Without sklearn"
