--- a/Week-6-Presentation/Old car price prediction without sklearn.ipynb
+++ b/Week-6-Presentation/Old car price prediction without sklearn.ipynb
@@ -3915,7 +3915,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x13581b615e0>"
+       "<seaborn.axisgrid.PairGrid at 0x139aebfd700>"
       ]
      },
      "execution_count": 78,
@@ -4730,7 +4730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 92,
    "id": "78e2445b",
    "metadata": {},
    "outputs": [],
@@ -4749,7 +4749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 93,
    "id": "e9bb28b1",
    "metadata": {},
    "outputs": [],
@@ -4761,7 +4761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 94,
    "id": "48005aec",
    "metadata": {},
    "outputs": [],
@@ -4780,8 +4780,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "87f7b498",
+   "execution_count": 95,
+   "id": "dd8167b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4792,8 +4792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "ab088dfa",
+   "execution_count": 96,
+   "id": "9c5b0cd4",
    "metadata": {},
    "outputs": [
     {
@@ -4805,7 +4805,7 @@
        "Lasso(alpha=1)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4816,8 +4816,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "df26fd3f",
+   "execution_count": 97,
+   "id": "820e353d",
    "metadata": {},
    "outputs": [
     {
@@ -4826,7 +4826,7 @@
        "90.01583195798445"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4837,8 +4837,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "1c0e746a",
+   "execution_count": 98,
+   "id": "1a2954e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4847,8 +4847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "8a6ce582",
+   "execution_count": 99,
+   "id": "034f086a",
    "metadata": {},
    "outputs": [
     {
@@ -4859,6 +4859,7 @@
       "r2_score 84.64\n",
       "Adjusted_r2_score 75.19\n",
       "MAE: 409502.61\n",
+      "MSE: 411984551791.45917\n",
       "RMSE: 641860.23\n"
      ]
     }
@@ -4871,13 +4872,134 @@
     "a_r2 = 1-(1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
     "print('Adjusted_r2_score',\"{:.2f}\".format(a_r2*100))\n",
     "print('MAE:', \"{:.2f}\".format(metrics.mean_absolute_error(y_test, y_pred)))\n",
-    "#print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
     "print('RMSE:', \"{:.2f}\".format(np.sqrt(metrics.mean_squared_error(y_test, y_pred))))"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "06a4d571",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=KFold(n_splits=5, random_state=42, shuffle=True),\n",
+       "             estimator=Lasso(),\n",
+       "             param_grid={&#x27;alpha&#x27;: [0.001, 0.01, 1.0, 5.0, 10.0]},\n",
+       "             return_train_score=True, scoring=&#x27;r2&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=KFold(n_splits=5, random_state=42, shuffle=True),\n",
+       "             estimator=Lasso(),\n",
+       "             param_grid={&#x27;alpha&#x27;: [0.001, 0.01, 1.0, 5.0, 10.0]},\n",
+       "             return_train_score=True, scoring=&#x27;r2&#x27;)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: Lasso</label><div class=\"sk-toggleable__content\"><pre>Lasso()</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Lasso</label><div class=\"sk-toggleable__content\"><pre>Lasso()</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "GridSearchCV(cv=KFold(n_splits=5, random_state=42, shuffle=True),\n",
+       "             estimator=Lasso(),\n",
+       "             param_grid={'alpha': [0.001, 0.01, 1.0, 5.0, 10.0]},\n",
+       "             return_train_score=True, scoring='r2')"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#gridsearchcv\n",
+    "from sklearn.model_selection import GridSearchCV,KFold,cross_val_score\n",
+    "folds=KFold(n_splits=5,shuffle=True,random_state=42)\n",
+    "params = {'alpha':[0.001,0.01,1.0,5.0,10.0]}\n",
+    "\n",
+    "model = Lasso()\n",
+    "\n",
+    "model_cv = GridSearchCV(estimator=model,param_grid=params,scoring='r2',cv=folds,return_train_score=True,verbose=0)\n",
+    "model_cv.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5120239c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 0.001}"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_cv.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "2b902fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_grid = model_cv.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "32f6265e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R squared error for grid :  84.6400061356604\n",
+      "Adjusted_r2_score 75.19079525053003\n",
+      "Mean Absolute Error for grid:  409505.5297216465\n",
+      "Mean Squared Error for grid:  411905468628.9456\n",
+      "Root Mean Squared Error for grid:  641798.6199961368\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "# R squared error\n",
+    "score_1 = metrics.r2_score(y_test, y_pred_grid)\n",
+    "\n",
+    "# Mean Absolute Error\n",
+    "score_2 = metrics.mean_absolute_error(y_test, y_pred_grid)\n",
+    "\n",
+    "# Mean Absolute Error\n",
+    "score_3 = metrics.mean_squared_error(y_test, y_pred_grid)\n",
+    "\n",
+    "# Mean Absolute Error\n",
+    "score_4 = np.sqrt(metrics.mean_squared_error(y_test, y_pred_grid))\n",
+    "\n",
+    "print(\"R squared error for grid : \", score_1*100)\n",
+    "a_r2 = 1-(1-score_1)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
+    "print('Adjusted_r2_score',a_r2*100)\n",
+    "print('Mean Absolute Error for grid: ', score_2)\n",
+    "print('Mean Squared Error for grid: ', score_3)\n",
+    "print('Root Mean Squared Error for grid: ', score_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f95486b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "36653e46",
+   "id": "d099ff62",
    "metadata": {},
    "source": [
     "# without sklearn"
@@ -4885,7 +5007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc1e04af",
+   "id": "b584ce87",
    "metadata": {},
    "source": [
     "## Model building"
@@ -4893,7 +5015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 104,
    "id": "806e603a",
    "metadata": {},
    "outputs": [],
@@ -4935,7 +5057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 105,
    "id": "f540ddb3",
    "metadata": {},
    "outputs": [],
@@ -4950,7 +5072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "id": "0f8e671f",
    "metadata": {},
    "outputs": [],
@@ -4966,7 +5088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 107,
    "id": "64309113",
    "metadata": {},
    "outputs": [
@@ -4985,7 +5107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "id": "781e5da0",
    "metadata": {},
    "outputs": [],
@@ -4999,7 +5121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 109,
    "id": "5693f4ca",
    "metadata": {},
    "outputs": [
@@ -5015,14 +5137,6 @@
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "print(\"Mean absolute error:\", mae)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c894956d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
