--- a/Week-6-Presentation/Air_Quality_Prediction.ipynb
+++ b/Week-6-Presentation/Air_Quality_Prediction.ipynb
@@ -4011,7 +4011,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ae0004d160>"
+       "<seaborn.axisgrid.PairGrid at 0x2914d162eb0>"
       ]
      },
      "execution_count": 49,
@@ -4264,6 +4264,7 @@
       "r2_score 83.48\n",
       "Adjusted_r2_score 71.57\n",
       "MAE: 30.00\n",
+      "MSE: 3374.06\n",
       "RMSE: 58.09\n"
      ]
     }
@@ -4276,7 +4277,7 @@
     "a_r2 = 1-(1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
     "print('Adjusted_r2_score',\"{:.2f}\".format(a_r2*100))\n",
     "print('MAE:', \"{:.2f}\".format(metrics.mean_absolute_error(y_test, y_pred)))\n",
-    "#print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "print('MSE:', \"{:.2f}\".format(metrics.mean_squared_error(y_test, y_pred)))\n",
     "print('RMSE:', \"{:.2f}\".format(np.sqrt(metrics.mean_squared_error(y_test, y_pred))))"
    ]
   },
