--- a/Week-6-Presentation/Melburne_Housing_Marcket_without_sklearn.ipynb
+++ b/Week-6-Presentation/Melburne_Housing_Marcket_without_sklearn.ipynb
@@ -4826,7 +4826,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "dd3e97dc",
+   "id": "4777ed04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4837,7 +4837,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "33dc112e",
+   "id": "08d91f4e",
    "metadata": {},
    "outputs": [
     {
@@ -4861,7 +4861,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "0d807030",
+   "id": "1560cd13",
    "metadata": {},
    "outputs": [
     {
@@ -4882,7 +4882,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "005c1259",
+   "id": "5a1b71bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4891,8 +4891,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "16404ddd",
+   "execution_count": 104,
+   "id": "08f8e88c",
    "metadata": {},
    "outputs": [
     {
@@ -4902,8 +4902,9 @@
       "Lasso\n",
       "r2_score 53.23\n",
       "Adjusted_r2_score 52.79\n",
-      "MAE: 220748.70\n",
-      "RMSE: 288881.34\n"
+      "MAE: 220752.72\n",
+      "MSE: 83454399323.99054\n",
+      "RMSE: 288884.75\n"
      ]
     }
    ],
@@ -4915,21 +4916,21 @@
     "a_r2 = 1-(1-score)*(len(y_test)-1)/(len(y_test)-X_test.shape[1]-1)\n",
     "print('Adjusted_r2_score',\"{:.2f}\".format(a_r2*100))\n",
     "print('MAE:', \"{:.2f}\".format(metrics.mean_absolute_error(y_test, y_pred)))\n",
-    "#print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "print('MSE:', metrics.mean_squared_error(y_test, y_pred))\n",
     "print('RMSE:', \"{:.2f}\".format(np.sqrt(metrics.mean_squared_error(y_test, y_pred))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f8162e2",
+   "id": "c177afb8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a20a2fd4",
+   "id": "ce228e63",
    "metadata": {},
    "source": [
     "# Without sklearn"
