--- a/Week-6-Presentation/Sales_of_retail_store_without_sklearn.ipynb
+++ b/Week-6-Presentation/Sales_of_retail_store_without_sklearn.ipynb
@@ -2171,7 +2171,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1d44deed100>"
+       "<seaborn.axisgrid.PairGrid at 0x1e0246fe700>"
       ]
      },
      "execution_count": 60,
@@ -3232,7 +3232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 87,
    "id": "ab903a36",
    "metadata": {},
    "outputs": [
@@ -3241,10 +3241,10 @@
      "output_type": "stream",
      "text": [
       "Lasso\n",
-      "r2_score 19.78\n",
-      "Adjusted_r2_score 19.73\n",
-      "MAE: 1.77\n",
-      "MSE: 5.67\n",
+      "r2_score 19.67\n",
+      "Adjusted_r2_score 19.62\n",
+      "MAE: 1.78\n",
+      "MSE: 5.68\n",
       "RMSE: 2.38\n"
      ]
     }
@@ -3396,8 +3396,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "d7187722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def mean_squared_error(y_test, y_pred):\n",
+    "    mse = np.mean((y_test - y_pred) ** 2)\n",
+    "    return mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "2fb49022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean squared error: 5.67283537396656\n"
+     ]
+    }
+   ],
+   "source": [
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(\"Mean squared error:\", mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "81b5d1a7",
+   "id": "02e7bf0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96870734",
+   "metadata": {},
+   "source": [
+    "# Reddappa M R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a291690",
    "metadata": {},
    "outputs": [],
    "source": []
